# FPL-Predictive-Model

./: .gitignore  README.md  analyze_model.py  backtest_model.py  collect_data.py  predict_points.py  pyproject.toml  requirements.txt  train_model.py
src/: __init__.py  config.py  main.py
src/collectors/: __init__.py  base.py  club_collector.py  fixture_collector.py  gameweek_collector.py  player_collector.py
src/ml/: __init__.py  check_omp.py  features.py  model.py  predictor.py  training.py
src/models/: __init__.py  club.py  fixture.py  gameweek_performance.py  player.py
src/storage/: __init__.py  csv_handler.py
tests/: __init__.py
